[package]
name = "scuttlebutt-shs"
version = "0.1.0"
authors = [
    "Zentauro <pedrogomezmartin1999@gmail.com>"
    "PabloAceG <pabloacereda98@gmail.com>"]
edition = "2018"
description = "Scuttlebutt Secret Handshake."
license = "AGPL-3.0-or-later"
keywords = [ "scuttlebutt", "handshake" ]
categories = [ "protocol" ]
workspace = "src"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
